--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,13 @@
     display: block;
     visibility: visible;
     position: fixed;
-    top: 20px;
-    right: 12.5%;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%);
+}
+
+iframe {
+    width: 500px;
 }
 
 .band__name {
